--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
@@ -18,7 +19,7 @@
     <script src="./js/index.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm justify-content-between" style="background: #ffc100;">
+    <nav class="navbar navbar-expand-sm justify-content-between" data-aos="fade-up" data-aos-duration="2000" style="background: #ffc100;">
         <a class="navbar-brand text-white" href="#">Fancy Todo</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -257,7 +258,7 @@
                         </div>
                         <div class="form-group">
                             <label for="recipient-name" class="col-form-label">Due date:</label>
-                            <input id="todoDate" type="date" id="min" class="form-control" required>
+                            <input id="todoDate" type="date" class="form-control" required>
                         </div>
                     </form>
                 </div>
@@ -290,7 +291,7 @@
                         </div>
                         <div class="form-group">
                             <label for="recipient-name" class="col-form-label">Due date:</label>
-                            <input id="update-todo-date" type="date" id="min" class="form-control" required>
+                            <input id="update-todo-date" type="date" class="form-control" required>
                         </div>
                     </form>
                 </div>
@@ -301,5 +302,11 @@
             </div>
         </div>
     </div>
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
