--- a/client/index.html
+++ b/client/index.html
@@ -106,7 +106,7 @@
         <div id="project-details">
             <div class="row justify-content-between mt-3">
                 <h3 style="color: #ffc100;">Project Todos</h3>
-                <div>
+                <div id="nav-project">
                     <button type="button" class="btn text-white" style="background: #ffc100;" data-toggle="modal" data-target="#addMemberModal">Add Member</button>
                     <button type="button" class="btn text-white" style="background: #ffc100;" data-toggle="modal" data-target="#addTodoModal">Add Todo</button>
                 </div>
