masih coba bikin google signin berfungsi di deploynya

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="google-signin-client_id" content="147025214331-q1f0rn8qudb7bho1j9alesrhmbhd5bq3.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="147025214331-lbtj7qeunmq388k2pr3oh3dp2niloj8a.apps.googleusercontent.com">
+    <!-- <meta name="google-signin-client_id" content="147025214331-kt0ft039k6u65g70b7ap04g24nggd52u.apps.googleusercontent.com"> -->
+    <!-- <meta name="google-signin-client_id" content="147025214331-q1f0rn8qudb7bho1j9alesrhmbhd5bq3.apps.googleusercontent.com"> -->
     <title>Fancy-Todo</title>
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
